Fixed z-index for autocomplete.

--- a/css/app.css
+++ b/css/app.css
@@ -66,3 +66,7 @@
 .fc-day-grid-event .fc-content {
     white-space: normal !important;
 }
+
+.ui-autocomplete.ui-front {
+    z-index: 1001;
+}
